kube/backend.pods.yml
# This handles the backend workers that process reports.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: backend
      labels:
        app: backend
    spec:
      volumes:
        - name: container-volume
          configMap:
            name: container
            items:
              - key: db
                path: db.yml
              - key: log
                path: log.yml
        - name: etc-volume
          configMap:
            name: etc
            items:
              - key: beam-minion
                path: beam-minion.yml
        - name: mysql-secret
          secret:
            secretName: mysql-secret

      containers:
        - name: backend
          image: cpantesters/backend:latest
          command:
            - beam
            - minion
            - worker
            - -j
            - "5"
            - -s
            - "0"
          volumeMounts:
            - mountPath: /etc/container
              name: container-volume
            - mountPath: /etc/minion
              name: etc-volume
            - mountPath: /etc/secrets
              name: mysql-secret
              readOnly: true
          resources:
            requests:
              cpu: 0.2
              memory: 500M
            limits:
              cpu: 1
              memory: 700M
      restartPolicy: Always
