kube/api.pods.yml
# This is `api.cpantesters.org`, the Mojolicious API server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 8
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: api
      labels:
        app: api
    spec:
      volumes:
        - name: conf-volume
          configMap:
            name: api-conf
            items:
              - key: api-conf
                path: api.conf
        - name: etc-volume
          configMap:
            name: etc
            items:
              - key: beam-minion
                path: beam-minion.yml
        - name: mysql-secret
          secret:
            secretName: mysql-secret

      containers:
        - name: api
          image: cpantesters/api:latest
          command:
            - cpantesters-api
            - prefork
            - -w
            - "2"
            - -I
            - "30"
            - -H
            - "300"
          volumeMounts:
            - mountPath: /etc/app
              name: conf-volume
            - mountPath: /etc/minion
              name: etc-volume
            - mountPath: /etc/secrets
              name: mysql-secret
              readOnly: true
          resources:
            requests:
              cpu: 0.1
              memory: 500M
            limits:
              cpu: 0.5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
spec:
  selector:
    app: api
  type: NodePort
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 3000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  namespace: default
spec:
  rules:
    - host: api.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
