kube/backpan.pods.yml
# This is for `backpan.cpantesters.org`, including Neil Bowers's backpan indexer.
#

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backpan-http
  namespace: cpan
  labels:
    app: backpan-http
spec:
  selector:
    matchLabels:
      app: backpan-http
  replicas: 2
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: nginx
      labels:
        app: backpan-http
    spec:
      restartPolicy: Always
      volumes:
        - name: backpan-volume
          persistentVolumeClaim:
            claimName: backpan-volume
        - name: nginx-conf-volume
          configMap:
            name: nginx-conf
            items:
              - key: default
                path: default.conf

      containers:
        - name: nginx
          image: nginx:mainline-alpine
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: backpan-volume
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf-volume
          resources:
            requests:
              cpu: 0.01
              memory: 150M

---
apiVersion: v1
kind: Service
metadata:
  name: backpan
  namespace: cpan
spec:
  selector:
    app: backpan-http
  type: NodePort
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: backpan
  namespace: cpan
spec:
  rules:
    - host: backpan.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backpan
                port:
                  number: 80
