kube/collector.pods.yml
# This is the new raw storage service, the collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  namespace: default
  labels:
    app: collector
spec:
  selector:
    matchLabels:
      app: collector
  replicas: 4
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: collector
      labels:
        app: collector
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                # The current collector object storage is in lin-sea, so
                # it is more efficient to also do batch processing from there.
                matchExpressions:
                  - key: "topology.kubernetes.io/zone"
                    operator: In
                    values:
                      - "lin-sea"
      volumes:
        - name: conf-volume
          configMap:
            name: collector-conf
            items:
              - key: collector-conf
                path: collector.conf
        - name: collector-secret
          secret:
            secretName: collector-secret
      containers:
        - name: collector
          image: cpantesters/collector:latest
          command:
            - perl
          args:
            - script/collector
            - prefork
            - -w
            - "2"
            - -G
            - "1500"
            - -H
            - "300"
          volumeMounts:
            - mountPath: /etc/app
              name: conf-volume
            - mountPath: /etc/secrets
              name: collector-secret
              readOnly: true
          resources:
            requests:
              cpu: 500m
              memory: 250M
            limits:
              cpu: 1
              memory: 750M
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: default
spec:
  selector:
    app: collector
  type: NodePort
  ports:
    - name: collector
      protocol: TCP
      port: 80
      targetPort: 3000

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: collector
  namespace: default
spec:
  rules:
    - host: collector.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: collector
                port:
                  number: 80
