kube/cpan.pods.yml
# This is the public CPAN mirror hosted by CPAN Testers
# TODO: Need rsync daemon mode
# TODO: Need ingress for cpan

---
apiVersion: v1
kind: Namespace
metadata:
  name: cpan

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rrr-client
  namespace: cpan
  labels:
    app: rrr-client
spec:
  selector:
    matchLabels:
      app: rrr-client
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: rrr-client
      labels:
        app: rrr-client
    spec:
      restartPolicy: Always
      volumes:
        - name: cpan-volume
          persistentVolumeClaim:
            claimName: cpan-volume
      containers:
        - name: rrr-client
          image: cpantesters/cpan
          volumeMounts:
            - mountPath: /data/CPAN
              name: cpan-volume
          resources:
            requests:
              cpu: 1
              memory: 200M
            limits:
              cpu: 1
              memory: 350M
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpan-http
  namespace: cpan
  labels:
    app: cpan-http
spec:
  selector:
    matchLabels:
      app: cpan-http
  replicas: 2
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: nginx
      labels:
        app: cpan-http
    spec:
      restartPolicy: Always
      volumes:
        - name: cpan-volume
          persistentVolumeClaim:
            claimName: cpan-volume
        - name: nginx-conf-volume
          configMap:
            name: nginx-conf
            items:
              - key: default
                path: default.conf

      containers:
        - name: nginx
          image: nginx:mainline-alpine
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: cpan-volume
              readOnly: true
            - mountPath: /etc/nginx/conf.d
              name: nginx-conf-volume
          resources:
            requests:
              cpu: 0.01
              memory: 150M

---
apiVersion: v1
kind: Service
metadata:
  name: cpan
  namespace: cpan
spec:
  selector:
    app: cpan-http
  type: NodePort
  ports:
    - name: api
      protocol: TCP
      port: 80
      targetPort: 80

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cpan
  namespace: cpan
spec:
  rules:
    - host: cpan.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cpan
                port:
                  number: 80
