kube/mcp.pods.yml
# This is `mcp.cpantesters.org`, the Model Context Protocol server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp
  namespace: default
  labels:
    app: mcp
spec:
  selector:
    matchLabels:
      app: mcp
  replicas: 2
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: mcp
      labels:
        app: mcp
    spec:
      containers:
        - name: mcp
          image: cpantesters/mcp:latest
          command:
            - perl
          args:
            - script/cpantesters-mcp-service
            - prefork
            - -w
            - "2"
            - -I
            - "30"
            - -H
            - "300"
          resources:
            requests:
              cpu: 0.1
              memory: 500M
            limits:
              cpu: 0.5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mcp
  namespace: default
spec:
  selector:
    app: mcp
  type: NodePort
  ports:
    - name: mcp
      protocol: TCP
      port: 80
      targetPort: 3000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: mcp
  namespace: default
spec:
  rules:
    - host: mcp.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mcp
                port:
                  number: 80
