kube/web.pods.yml
# This is `cpantesters.org`, the Mojolicious web app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
  replicas: 6
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: web
      labels:
        app: web
    spec:
      volumes:
        - name: conf-volume
          configMap:
            name: web-conf
            items:
              - key: web-conf
                path: web.conf
        - name: mysql-secret
          secret:
            secretName: mysql-secret

      containers:
        - name: web
          image: cpantesters/web:latest
          command:
            - cpantesters-web
            - prefork
            - -w
            - "2"
            - -I
            - "30"
            - -H
            - "300"
          volumeMounts:
            - mountPath: /etc/app
              name: conf-volume
            - mountPath: /etc/secrets
              name: mysql-secret
              readOnly: true
          resources:
            requests:
              cpu: 0.1
              memory: 350M
            limits:
              cpu: 0.5
              memory: 450M
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web
  namespace: default
spec:
  rules:
    - host: cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
    - host: www.cpantesters.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
